# gossiper

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/gossip-core/: Cargo.toml
crates/gossip-core/src/: config.rs  effect.rs  event.rs  identity.rs  lib.rs  message.rs  node.rs  rumor.rs  rumor_store.rs  time.rs
crates/gossip-core/tests/: propagation.rs
crates/gossip-sim/: Cargo.toml
crates/gossip-sim/examples/: cluster.rs  convergence.rs  fixed_run.rs  line_topology.rs  network_conditions.rs  scenario_builder.rs
crates/gossip-sim/src/: lib.rs
crates/gossip-transport/: Cargo.toml
crates/gossip-transport/src/: lib.rs
crates/gossip-transport/tests/: in_memory_gossip.rs
crates/gossiper/: Cargo.toml  README.md
crates/gossiper-core/: Cargo.toml  README.md
crates/gossiper-core/examples/: anti_entropy.rs  grow_only_counter.rs  grow_only_set.rs  versioned_kv.rs
crates/gossiper-core/src/: anti_entropy.rs  config.rs  event.rs  identity.rs  lib.rs  message.rs  node.rs  peer_selection.rs  rng.rs  rumor.rs  rumor_store.rs  time.rs
crates/gossiper-core/tests/: propagation.rs  serde.rs
crates/gossiper-sim/: Cargo.toml  README.md
crates/gossiper-sim/examples/: cluster.rs  convergence.rs  fixed_run.rs  line_topology.rs  network_conditions.rs  scenario_builder.rs
crates/gossiper-sim/src/: lib.rs
crates/gossiper-transport/: Cargo.toml  README.md
crates/gossiper-transport/src/: lib.rs
crates/gossiper-transport/tests/: in_memory_gossip.rs
crates/gossiper/examples/: basic_gossip.rs  sim_network.rs
crates/gossiper/src/: lib.rs
crates/gossiper/tests/: facade.rs
