[package]
name = "gossiper-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Transport-independent gossip protocol building blocks."
repository = "https://github.com/deeborania/gossiper"
readme = "README.md"
keywords = ["gossip", "protocol", "distributed", "networking"]
categories = ["network-programming", "data-structures"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"
