[package]
name = "gossiper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Reusable gossip protocol building blocks for Rust"
repository = "https://github.com/deeborania/gossip-rust"
readme = "README.md"
keywords = ["gossip", "protocol", "distributed", "networking"]
categories = ["network-programming"]

[features]
default = ["transport"]
transport = ["dep:gossiper-transport"]
sim = ["transport", "dep:gossiper-sim"]
serde = ["gossiper-core/serde"]

[dependencies]
gossiper-core = { version = "0.1.0", path = "../gossiper-core" }
gossiper-transport = { version = "0.1.0", path = "../gossiper-transport", optional = true }
gossiper-sim = { version = "0.1.0", path = "../gossiper-sim", optional = true }

[[example]]
name = "basic_gossip"
path = "examples/basic_gossip.rs"
required-features = ["transport"]

[[example]]
name = "sim_network"
path = "examples/sim_network.rs"
required-features = ["sim"]
